# my_game_engine

./: CMakeLists.txt
include/glad/: glad.h
shaders/: default.frag  default.vert  first.frag  seccond.frag  spatial_cubes.frag  tie.frag
src/: glad.c  main.c
